syntax="proto3";

package genproto;
option go_package="genproto/user_service";

message User {
    string id = 1;
    string name = 2;
}

message UserId {
    string id = 1;
}

message GetAllUserResponse {
    repeated User users = 1;
    int32 count = 2;
}

message UserMessage {
    string user_id = 1;
    string message = 2;
}